--- a/Components/Pages/Debts.razor
+++ b/Components/Pages/Debts.razor
@@ -8,11 +8,11 @@
     <aside class="sidebar">
         <h2>EcoExpense</h2>
         <nav class="menu">
-            <a href="/" class="menu-item active">Dashboard</a>
+            <a href="/" class="menu-item ">Dashboard</a>
             <a href="/transactions" class="menu-item">Transactions</a>
             <a href="#" class="menu-item">Outflows</a>
             <a href="#" class="menu-item">Inflows</a>
-            <a href="/debts" class="menu-item">Debts</a>
+            <a href="/debts" class="menu-item active">Debts</a>
         </nav>
         <button class="logout-btn" @onclick="Logout">Logout</button>
     </aside>
@@ -58,43 +58,45 @@
             </tbody>
         </table>
 
-        <h2>Add New Debt</h2>
+        <div class="add-debt-section">
+            <h2>Add New Debt</h2>
 
-        <EditForm Model="newDebt" OnValidSubmit="HandleDebtSubmit">
-            <DataAnnotationsValidator />
-            <ValidationSummary />
+            <EditForm Model="newDebt" OnValidSubmit="HandleDebtSubmit">
+                <DataAnnotationsValidator />
+                <ValidationSummary />
 
-            <div class="form-group">
-                <label for="userId">User</label>
-                <select id="userId" @bind="newDebt.UserId" class="form-control">
-                    @foreach (var user in Data.Users)
-                    {
-                        <option value="@user.Id">@user.Name</option>
-                    }
-                </select>
-            </div>
+                <div class="form-group">
+                    <label for="userId">User</label>
+                    <select id="userId" @bind="newDebt.UserId" class="form-control">
+                        @foreach (var user in Data.Users)
+                        { 
+                            <option value="@user.Id">@user.Name</option>
+                        }
+                    </select>
+                </div>
 
-            <div class="form-group">
-                <label for="amount">Debt Amount</label>
-                <InputNumber id="amount" @bind-Value="newDebt.Amount" class="form-control" />
-            </div>
+                <div class="form-group">
+                    <label for="amount">Debt Amount</label>
+                    <InputNumber id="amount" @bind-Value="newDebt.Amount" class="form-control" />
+                </div>
 
-            <div class="form-group">
-                <label for="paidAmount">Paid Amount</label>
-                <InputNumber id="paidAmount" @bind-Value="newDebt.PaidAmount" class="form-control" />
-            </div>
+                <div class="form-group">
+                    <label for="paidAmount">Paid Amount</label>
+                    <InputNumber id="paidAmount" @bind-Value="newDebt.PaidAmount" class="form-control" />
+                </div>
 
-            <div class="form-group">
-                <label for="description">Description</label>
-                <InputText id="description" @bind-Value="newDebt.Description" class="form-control" />
-            </div>
+                <div class="form-group">
+                    <label for="description">Description</label>
+                    <InputText id="description" @bind-Value="newDebt.Description" class="form-control" />
+                </div>
 
-            <div class="form-group">
-                <button type="submit" class="btn btn-primary">Add Debt</button>
-            </div>
-        </EditForm>
-    </main>
-</div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary">Add Debt</button>
+                </div>
+            </EditForm>
+        </div>
+       </main>
+    </div>
 
 @code {
     private AppData Data;
