--- a/Components/Pages/Debts.razor.css
+++ b/Components/Pages/Debts.razor.css
@@ -16,6 +16,7 @@
         font-size: 20px;
         margin-bottom: 20px;
         color: white;
+        
     }
 
 .menu {
@@ -77,3 +78,39 @@
     border-radius: 4px;
     width: 250px;
 }
+
+.add-debt-section {
+    margin-top: 30px; /* Ensure space between table and form */
+    background-color: #D9D9D9;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+/* Form Inputs */
+.form-group {
+    margin-bottom: 15px;
+}
+
+.form-control {
+    padding: 10px;
+    width: 100%;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+}
+
+button.btn {
+    background-color: #3C3F4E;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 1rem;
+    transition: background 0.3s;
+    width: 30%;
+    margin-left: 400px;
+    margin-top: 50px;
+}
+
+   
