--- a/Components/Pages/Register.razor.css
+++ b/Components/Pages/Register.razor.css
@@ -5,7 +5,7 @@
     background-color: #f4f4f4;
 }
 
-.login-container {
+.register-container {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -14,7 +14,7 @@
     box-sizing: border-box;
 }
 
-.login-box {
+.register-box {
     background-color: #ffffff;
     padding: 30px;
     border-radius: 10px;
@@ -22,14 +22,14 @@
     width: 400px;
 }
 
-    .login-box h3 {
+    .register-box h3 {
         margin-bottom: 20px;
         font-size: 24px;
         color: #333;
         text-align: center;
     }
 
-.login-form {
+.register-form {
     display: flex;
     flex-direction: column;
     gap: 15px;
@@ -45,20 +45,6 @@
 }
 
     .input-field:focus {
-        border-bottom: 2px solid #007BFF;
-    }
-
-.select-field {
-    border: none;
-    border-bottom: 2px solid #ccc;
-    padding: 10px 5px;
-    font-size: 14px;
-    background: none;
-    outline: none;
-    transition: border-color 0.3s ease;
-}
-
-    .select-field:focus {
         border-bottom: 2px solid #007BFF;
     }
 
@@ -97,8 +83,10 @@
     margin-left: -90px;
 }
 
-.login-image {
+.register-image {
     width: 100%;
+    max-width: 500px; /* You can set a max width to avoid stretching */
+    height: auto; /* Maintain aspect ratio */
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
